--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-firebase-hooks": "^5.1.1"
+    "react-firebase-hooks": "^5.1.1",
+    "react-infinite-scroll-component": "^6.1.0"
   }
 }
