--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.1.0",
     "aos": "^2.3.4",
     "eslint-config-next": "^14.1.0",
     "firebase": "^10.4.0",
