--- a/package.json
+++ b/package.json
@@ -6,19 +6,19 @@
     "dev": "next dev -p 8080",
     "build": "next build",
     "start": "next start -p 8080",
-    "lint": "next lint"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.0.15",
     "@vercel/speed-insights": "^1.1.0",
     "aos": "^2.3.4",
-    "eslint-config-next": "^14.1.0",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "16.1.1",
     "firebase": "^10.4.0",
-    "next": "^14.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "16.1.1",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "react-firebase-hooks": "^5.1.1",
-    "react-icons": "^5.5.0",
     "react-infinite-scroll-component": "^6.1.0"
   },
   "devDependencies": {
