--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^5.5.0",
     "react-infinite-scroll-component": "^6.1.0"
   },
   "devDependencies": {
